--- a/test_app/templates/main.html
+++ b/test_app/templates/main.html
@@ -9,6 +9,13 @@
   <body>
     <div class="container mt-5">
       <div class="mb-3">
+        <form action="{% url 'add_devices' %}" method="post">
+          {% csrf_token %}
+          <label for="device_count" class="form-label">Введите число устройств:</label>
+          <input type="number" id="device_count" name="device_count" class="form-control" required />
+          <button type="submit" class="btn btn-primary">Добавить</button>
+        </form>
+        <hr />
         <span class="form-label">Общее число устройств:</span>
         <span id="totalDevices">0</span>
       </div>
