--- a/test_app/templates/main.html
+++ b/test_app/templates/main.html
@@ -17,7 +17,7 @@
         </form>
         <hr />
         <span class="form-label">Общее число устройств:</span>
-        <span id="totalDevices">0</span>
+        <span id="totalDevices">{{ context }}</span>
       </div>
 
       <h2>Цвета кнопок</h2>
@@ -31,15 +31,15 @@
         <tbody>
           <tr>
             <td style="background-color: #FF0000; color: white;">#FF0000</td>
-            <td>33.3%</td>
+            <td>{{ color.red }}%</td>
           </tr>
           <tr>
             <td style="background-color: #00FF00;">#00FF00</td>
-            <td>33.3%</td>
+            <td>{{ color.green }}%</td>
           </tr>
           <tr>
             <td style="background-color: #0000FF; color: white;">#0000FF</td>
-            <td>33.3%</td>
+            <td>{{ color.blue }}%</td>
           </tr>
         </tbody>
       </table>
@@ -55,19 +55,19 @@
         <tbody>
           <tr>
             <td>10</td>
-            <td>74.98%</td>
+            <td>{{ price.10 }}%</td>
           </tr>
           <tr>
             <td>20</td>
-            <td>10.01%</td>
+            <td>{{ price.20 }}%</td>
           </tr>
           <tr>
             <td>50</td>
-            <td>4.95%</td>
+            <td>{{ price.50 }}%</td>
           </tr>
           <tr>
             <td>5</td>
-            <td>10.07%</td>
+            <td>{{ price.5 }}%</td>
           </tr>
         </tbody>
       </table>
@@ -75,4 +75,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
+  <style>
+    body {
+      transform: scale(0.6);
+      transform-origin: top left;
+    }
+  </style>
 </html>
