--- a/test_app/templates/main.html
+++ b/test_app/templates/main.html
@@ -11,12 +11,13 @@
       <div class="mb-3">
         <form action="{% url 'add_devices' %}" method="post">
           {% csrf_token %}
-          <label for="device_count" class="form-label">Введите число устройств:</label>
+          <label for="device_count" class="form-label">Введите число устройств для теста:</label>
           <input type="number" id="device_count" name="device_count" class="form-control" required />
           <button type="submit" class="btn btn-primary">Добавить</button>
         </form>
         <hr />
         <span class="form-label">Общее число устройств:</span>
+        <span id="totalDevices">{{ context.count_devices }}</span>
         <span id="totalDevices">{{ context }}</span>
       </div>
 
@@ -31,15 +32,15 @@
         <tbody>
           <tr>
             <td style="background-color: #FF0000; color: white;">#FF0000</td>
-            <td>{{ color.red }}%</td>
+            <td>{{ context.color.red }}%</td>
           </tr>
           <tr>
             <td style="background-color: #00FF00;">#00FF00</td>
-            <td>{{ color.green }}%</td>
+            <td>{{ context.color.green }}%</td>
           </tr>
           <tr>
             <td style="background-color: #0000FF; color: white;">#0000FF</td>
-            <td>{{ color.blue }}%</td>
+            <td>{{ context.color.blue }}%</td>
           </tr>
         </tbody>
       </table>
@@ -55,19 +56,19 @@
         <tbody>
           <tr>
             <td>10</td>
-            <td>{{ price.10 }}%</td>
+            <td>{{ context.price.10 }}%</td>
           </tr>
           <tr>
             <td>20</td>
-            <td>{{ price.20 }}%</td>
+            <td>{{ context.price.20 }}%</td>
           </tr>
           <tr>
             <td>50</td>
-            <td>{{ price.50 }}%</td>
+            <td>{{ context.price.50 }}%</td>
           </tr>
           <tr>
             <td>5</td>
-            <td>{{ price.5 }}%</td>
+            <td>{{ context.price.5 }}%</td>
           </tr>
         </tbody>
       </table>
