--- a/test_app/templates/main.html
+++ b/test_app/templates/main.html
@@ -11,14 +11,15 @@
       <div class="mb-3">
         <form action="{% url 'add_devices' %}" method="post">
           {% csrf_token %}
-          <label for="device_count" class="form-label">Введите число устройств для теста:</label>
-          <input type="number" id="device_count" name="device_count" class="form-control" required />
+          <label for="device_count" class="form-label fw-bold">Введите число устройств для теста:</label>
+          <input type="number" id="device_count" name="device_count" class="form-control w-50" required />
           <button type="submit" class="btn btn-primary">Добавить</button>
         </form>
         <hr />
-        <span class="form-label">Общее число устройств:</span>
-        <span id="totalDevices">{{ context.count_devices }}</span>
-        <span id="totalDevices">{{ context }}</span>
+        <div class="alert alert-info d-inline-block">
+          <span class="fw-bold">Число устройств:</span>
+          <span id="totalDevices" class="badge bg-primary">{{ context.count_devices_now }}</span>
+        </div>
       </div>
 
       <h2>Цвета кнопок</h2>
@@ -80,6 +81,9 @@
     body {
       transform: scale(0.6);
       transform-origin: top left;
+    }
+    .btn {
+      margin-top: 10px !important;
     }
   </style>
 </html>
