--- a/test_app/templates/work.html
+++ b/test_app/templates/work.html
@@ -5,7 +5,7 @@
       <hr />
       <div class="alert alert-info d-inline-block">
         <span class="fw-bold">Число устройств:</span>
-        <span id="totalDevices" class="badge bg-primary">{{ context.count_devices_now }}{{ context.error }}</span>
+        <span id="totalDevices" class="badge bg-primary">{{ context.total_devices }}</span>
       </div>
     </div>
 
