--- a/test_app/templates/main.html
+++ b/test_app/templates/main.html
@@ -11,7 +11,7 @@
     <div class="container mt-3">
       <div class="d-flex gap-3">
         <span><a href="{% url 'tests' %}" class="btn btn-primary">Тесты</a></span>
-        <span><a href="{% url 'work' %}" class="btn btn-secondary">Рабочая статистика</a></span>
+        <span><a href="{% url 'work' %}" class="btn btn-secondary">Основная статистика</a></span>
       </div>
     </div>
     {% block content %}
